# POCArchitect-AI-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  License.md  MANIFEST.in  POCArchitect_Example_Report.md  POCArchitect_Quickstart.txt  POC_Architect_Prompt.md  README.md  USAGE.md  docker-guide.md  dockerfile  pocagent_preflight_check  preflight_checker.py  prompt.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test-full.sh  verify.sh
docs/: POCArchitect_Example_Report.md  agentusage.md  architecture.md  docker-guide.md  ollama-setup-guide.md  ollama_preflight_check.py
example_usage/: batch_urls.txt  single_url_example.md  usage.md
pocarchitect/: __init__.py  __main__.py  cli.py  preflight.py  preflight_checker.py  pyproject.toml
pocarchitect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/: POCAnalysis_payloadsallthethings.md  POCAnalysis_payloadsallthethings_20260403_015414.md  POCAnalysis_payloadsallthethings_20260403_015753.md  POCAnalysis_suyang.md
scripts/: __init__.py  cli.py  pocarchitect_openai_wrapper.py  pocarchitect_xai_wrapper.py  pyproject.toml  requirements.txt
tests/: __init.py__  conftest.py  test_preflight_checker.py  test_prompt_builder  test_report_structure.py
