[project]
name = "pocarchitect"
version = "0.2.0"
description = "POC Architect - AI Agent that turns raw PoC URLs into weaponized Markdown blueprints for red teamers"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "RikterSkale", email = "your-email@example.com"}
]
keywords = ["red-team", "pentesting", "poc", "exploit-development", "ai-agent", "offsec", "cybersecurity"]

dependencies = [
    "typer[all]>=0.12.5",
    "rich>=13.7.0",
    "openai>=1.35.0",           # xAI + OpenAI + Groq compatible
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",     # auto .env loading
    "GitPython>=3.1.0",         # ← REQUIRED for Python-side PoC ingestion / grounding context
]

[project.optional-dependencies]
all = [
    "anthropic>=0.30.0",        # --provider anthropic (Claude)
    "google-generativeai>=0.8.0" # --provider gemini
]

[project.scripts]
pocarchitect = "pocarchitect.cli:app"

[project.urls]
Homepage = "https://github.com/rikterskale/POCArchitect-AI-Agent"
Repository = "https://github.com/rikterskale/POCArchitect-AI-Agent"
"Bug Tracker" = "https://github.com/rikterskale/POCArchitect-AI-Agent/issues"

[tool.setuptools.packages.find]
include = ["pocarchitect*"]

# ── Explicitly include non-Python files from MANIFEST.in ──
[tool.setuptools]
include_package_data = true

# ── Modern alternative (still kept for wheel compatibility) ──
[tool.setuptools.package-data]
pocarchitect = ["*.md"]
