[project]
name = "pocarchitect"
version = "0.2.0"
description = "POC Architect - AI Agent that turns raw PoC URLs into weaponized Markdown blueprints for red teamers"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "RikterSkale", email = "your-email@example.com"}
]
keywords = ["red-team", "pentesting", "poc", "exploit-development", "ai-agent", "offsec", "cybersecurity", "prompt-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer[all]>=0.12.5",
    "rich>=13.7.0",
    "openai>=1.35.0",           # xAI + OpenAI + Groq compatible
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",     # auto .env loading
    "GitPython>=3.1.0",         # REQUIRED for Python-side PoC ingestion / grounding context
]

[project.optional-dependencies]
all = [
    "anthropic>=0.30.0",        # --provider anthropic
    "google-generativeai>=0.8.0" # --provider gemini
]
dev = [
    "tenacity>=8.5.0",          # retries + exponential backoff
    "tiktoken>=0.7.0",          # token counting / trimming for grounding context
    "ruff>=0.6.0",              # fast linting + formatting
    "black>=24.8.0",            # code formatter
    "mypy>=1.11.0",             # static type checking
]

[project.scripts]
pocarchitect = "pocarchitect.cli:app"

[project.urls]
Homepage = "https://github.com/rikterskale/POCArchitect-AI-Agent"
Repository = "https://github.com/rikterskale/POCArchitect-AI-Agent"
"Bug Tracker" = "https://github.com/rikterskale/POCArchitect-AI-Agent/issues"
Changelog = "https://github.com/rikterskale/POCArchitect-AI-Agent/blob/main/CHANGELOG.md"

# ── Packaging: include the prompt file ─────────────────────────────
[tool.setuptools.packages.find]
include = ["pocarchitect*"]

[tool.setuptools.package-data]
pocarchitect = ["*.md"]

# ── Tooling config (ready for CI/CD) ───────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=pocarchitect --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
strict = true
