toml
[project]
name = "pocarchitect"
version = "0.2.0"
description = "AI agent that turns any POC URL into a perfect operational blueprint"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "openai>=1.0.0",
]

[project.scripts]
pocarchitect = "pocarchitect.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocarchitect*"]